# movie_analysis

./: LICENSE  README.md  my_notebook.ipynb  pyproject.toml  setup.py  working_with_web_data.ipynb
src/: part_3_web_scraping.py
src/movie_analysis/: __main__.py  part_1_xml_parsing.py  part_2_api.py  part_3_web_scraping.py
src/my_package/: part_1_xml_parsing.py  part_2_API.py
