[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "movie_analysis"
authors = [
    {name = "Qing Dou", email = "qdou@mail.yu.edu"}
]
maintainers = [
    {name = "Qing Dou", email = "qdou@mail.yu.edu"},
]
description = "A Python package for parsing XML sitemaps, fetching data from APIs, and scraping web content"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.3",
    "numpy>=1.20",
    "pandas>=1.4",
    "beautifulsoup4>=4.10.0",
    "seaborn>=0.11.0",
    "requests>=2.27.1"
]
version="2.0"

[project.urls]
Repository = "https://github.com/qdou14/movie_analysis.git"

[tool.setuptools.packages.find]
where = ["src"]